ghost/admin/app/styles/layouts/editor.css
/* ... */
.gh-editor-feature-image-indicator svg {
    height: 2.4rem;
}

.gh-editor-feature-image-indicator svg path {
    stroke: var(--midgrey-l2);
}

.gh-editor-feature-image-caption-container {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: .8rem 0;
}
.gh-editor-feature-image-alttext,
.gh-editor-feature-image-caption {
    width: 100%;
    min-height: 24px;
    margin: 0;
    padding: 0 3.6rem 0 0;
    outline: none;
    border-width: 0;
    border-style: none;
    font-size: 1.4rem;
    line-height: 24px;
    letter-spacing: .04rem;
    background-color: transparent !important;
    transition: border-color .15s linear;
    -webkit-appearance: none;
    appearance: none;
    overflow: hidden; /* Hides any indicators such as TK */
}

.gh-editor-feature-image-caption {
    text-align: center;
}

.gh-editor-feature-image-alttext::placeholder,
.gh-editor-feature-image-caption p::placeholder {
    color: var(--midlightgrey);
    opacity: 1 !important;
}

.gh-editor-feature-image-caption :is(.koenig-lexical *) {
    font-size: inherit !important;
    font-family: inherit !important;
    line-height: inherit !important;
    letter-spacing: inherit !important;
}

.gh-editor-feature-image-caption p {
    margin: 0;
}

.gh-editor-feature-image-alttext.faded:not(:focus),
.gh-editor-feature-image-caption.faded p {
    opacity: .5;
}

.gh-editor-title-container {
    position: relative;
    max-width: 740px;
    width: 100%;
    margin-right: auto;
    margin-left: auto;
    border: none;
    background: transparent;
}

.gh-editor-title {
    display: block;
    width: 100%;
    max-width: unset;
    min-height: auto;
    margin: 0 0 1.6rem;
    padding: 0 0 4px;
    border: none;
    background: transparent;
    color: var(--black);
    font-size: 4.8rem;
    letter-spacing: -0.017em;
    line-height: 1.1em;
    font-weight: 700;
    overflow: hidden;
    box-shadow: none;
}

@media (min-width: 500px) and (max-width: 768px) {
    .gh-editor-title {
        font-size: 3.6rem;
    }
}

@media (max-width: 500px) {
    .gh-editor-title {
        font-size: 2.8rem;
    }
}

.gh-editor-title:focus {
    box-shadow: none !important;
    border: none !important;
}

.gh-editor-title.faded {
    opacity: .5;
}

.gh-editor-title::placeholder {
    color: var(--lightgrey-d1);
    font-weight: 700;
    opacity: 1;
}

.gh-editor-hidden-indicator {
    position: absolute;
    top: -1px;
    height: 2.4rem;
    margin-left: -6rem;
    color: var(--midgrey-l2);
}

.gh-editor-title-container .gh-editor-hidden-indicator {
    top: 1.8rem;
}

.gh-editor-hidden-indicator svg {
    height: 2.4rem;
}

.gh-editor-excerpt {
    display: block;
    width: 100%;
    max-width: unset;
    min-width: auto;
    min-height: auto; /* Allows element to collapse for auto-expand calculation */
    margin: 0;
    padding: 0;
    border: none;
    background: transparent;
    color: var(--darkgrey);
    font-size: 2.0rem;
    font-weight: 440;
    line-height: 1.5em;
    letter-spacing: -.018em;
    overflow: hidden;
    box-shadow: none;
}

.gh-editor-excerpt:focus {
    box-shadow: none !important;
    border: none !important;
}

.gh-editor-excerpt-error {
    margin-top: .8rem;
    margin-bottom: 4.8rem;
    color: var(--red-d1);
    font-size: 1.4rem;
    font-weight: 400;
}

.gh-editor-title-divider {
    margin: 1.6rem 0 4.8rem;
}

.gh-editor-title-divider-error {
    margin: 1.6rem 0 0;
    border-top: 1px solid var(--red);
}

.gh-editor .tk-indicator {
    position: absolute;
    top: 15px;
    right: -5.6rem;
    padding: .4rem;
    color: #95A1AD;
    font-size: 1.2rem;
    font-weight: 500;
    cursor: pointer;
}

.gh-editor .tk-indicator-excerpt {
    top: -1px;
}

.gh-editor-feature-image-container .tk-indicator {
    top: 0;
    padding: 0 .4rem;
}

.gh-editor-back-button {
    display: flex;
    align-items: center;
    height: 34px;
    gap: 8px;
    padding: 0 12px;
    outline: none;
    border: none;
    color: var(--darkgrey);
    font-size: 1.35rem;
    font-weight: 500;
    letter-spacing: 0.2px;
    line-height: 34px;
    white-space: nowrap;
    background: var(--white);
    border-radius: var(--border-radius);
    transition: all 0.25s ease;
    transition-property: color, border-color, background, width, height, box-shadow;
}

.gh-editor-back-button:hover {
    color: var(--darkgrey);
    cursor: pointer;
    background: var(--whitegrey);
}

.gh-editor-back-button svg {
    width: 1.2rem;
    height: 1.2rem;
    margin-right: .5em;
    fill: var(--darkgrey);
}

@media (max-width: 500px) {
    .gh-editor-back-button span {
        display: none;
    }

    .gh-editor-back-button svg {
        width: 1.3rem;
        height: 1.3rem;
        margin-right: 0;
        fill: var(--midgrey-l1);
    }
}

.gh-editor-post-status {
    height: 34px;
    display: flex;
    align-items: center;
    padding: 0 12px;
    font-size: 1.35rem;
    font-weight: 400;
    color: var(--midgrey-l2);
    letter-spacing: .2px;
    line-height: 34px;
    background: var(--white);
    border-radius: var(--border-radius);
}

@media (max-width: 500px) {
    .gh-editor-post-status {
        padding: 0 8px;
    }
}

.gh-editor-post-status-btn {
    position: relative;
}

.gh-editor-post-status svg {
    width: 18px;
    height: 18px;
    margin-left: 1rem;
}

.gh-editor-post-status .view-post {
    display: inline-flex;
    align-items: center;
    color: var(--midgrey-l2);
    text-decoration: none;
    transition: all 0.2s ease;
}

.gh-editor-post-status .view-post:hover {
    color: var(--midgrey-d1);
}

.gh-editor-post-status .view-post svg {
    width: 1.2rem;
    height: 1.2rem;
    margin: 1px 0 0 .6rem;
    transition: all .15s ease;
}

.gh-editor-post-status .view-post:hover svg {
    transform: translateY(-1px);
}

@media (max-width: 720px) {
    .gh-editor-post-status .newsletter-failed {
        display: none;
    }
}
/* ... */

